assets/css/career.css
:root {
    --primary-color: #015c93;
    --secondary-color: #077afd;
    --primary-light: #888f96;
    --primary-hover: #d6efff;
    --white-color: #ffffff;
    --black-color: #000000;
    --light-gray: #F3F4F6;
    --dark-gray: #616162;
    --secondary-font: "Lexend", sans-serif;
}

.ApplyNowFormContainer {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background: rgba(0, 0, 0, 0.5);
    padding: 50px 0;
    z-index: 9999999;
    display: none;

    h3 {
        color: var(--primary-color);
        font-size: 1.7rem;
        font-weight: 500;
    }

    input::placeholder {
        color: gray;
        font-size: 14px;
        font-weight: 400;
    }

    select {
        color: gray;
        font-size: 14px;
        font-weight: 400;
    }

    button {
        background: var(--primary-color);
        color: var(--white-color);
        transition: all ease 0.3s;

        &:hover {
            background: var(--primary-hover);
            color: var(--primary-color);
        }
    }
}

.ApplyNowFormContainer.active {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100vh;
}

.Careers {
    .jobCard {
        h3 {
            color: var(--primary-color);
            font-size: 1.9rem;
            font-weight: 400;
        }

        p,
        span,
        li {
            color: var(--dark-gray);
        }

        .jobDesc {
            font-size: 16px;
        }

        .jobTitleContainer {
            border-right: 1px solid silver;
        }
    }
}

/* responsive styles */
@media screen and (max-width: 992px) {
    .jobCard {
        h3 {
            color: var(--primary-color);
            font-size: 1.6rem !important;
            font-weight: 400;
        }
    }
}

@media screen and (max-width: 768px) {
    .Cnt {
        .title {
            font-size: 2.5rem !important;
        }

        .description {
            font-size: 0.9rem !important;
        }
    }

    .jobCard {
        h3 {
            color: var(--primary-color);
            font-size: 1.3rem !important;
            font-weight: 400;
        }

        .jobDesc {
            font-size: 14px !important;
        }
    }

    .ApplyNowFormContainer {
        .ApplyNowForm {
            width: 90% !important;

            h3 {
                font-size: 1.1rem !important;
            }

            label {
                display: none !important;
            }

            button {
                font-size: 14px !important;
                padding: 5px 10px !important;
            }
        }


    }
}

@media screen and (max-width: 480px) {
    .jobTitleContainer {
        border-right: none !important;
        border-bottom: 1px solid silver;
    }
}

@media screen and (max-width: 380px) {
    .jobType {
        flex-direction: column !important;
    }
}

